--- a/locales/en.json
+++ b/locales/en.json
@@ -9,5 +9,6 @@
 	"LOGIN_TITLE": "LOGIN_TITLE",
 	"SOCIAL_LOGIN_TITLE": "SOCIAL_LOGIN_TITLE",
 	"LOGIN_FACEBOOK": "LOGIN_FACEBOOK",
-	"LOGIN_GOOGLE": "LOGIN_GOOGLE"
+	"LOGIN_GOOGLE": "LOGIN_GOOGLE",
+	"ER_USER_NOT_FOUND": "ER_USER_NOT_FOUND"
 }
